--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 1.1.0
-- Show unresolved item names for items which get consumed/upgraded such as veksar keys or quest aug components.
+- Add tooltips to indicate a different item was found for a given row
 - Various item updates
 
 1.0.0
