--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 1.1.0
 - Add tooltips to indicate a different item was found for a given row
+- Allow script to run with whatever folder name like bis or lazbis
 - Various item updates
 
 1.0.0
