--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 - Support for offline character data using sqlite3
 - Fix for linked item checks for visible armor containers
 - Various item updates
+- Add stat food quest info
 
 1.1.0
 - Add tooltips to indicate a different item was found for a given row
