--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-2.0.1
+2.1.0
+- Add 'Announce' button next to needed items to list who needs into /rs
 - Remove hardcoded things and pull from config file
 - Change layout of stat food tab
 
