--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.2.1
+- Fix item scanning for visible armor components (again)
+
 2.2.0
 - Add toggle to automatically announce in addition to the buttons for announcing needed items
 - When on, the driver will automatically report the toons who need the item into /rs if in a raid, otherwise in group, for each character which is currently selected to be shown in the table
