fix tradeskill column off by 1 when unselecting driver toon

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.2.2
+- Fix tradeskills showing incorrectly in table when unselecting show driver character
+
 2.2.1
 - Fix item scanning for visible armor components (again)
 - Sort dropdown menu of characters and names in announce messages
