--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.4.1
+- Fix: handle nil when incrementing count on looted item
+
 2.4.0
 - Feature: Persist settings for show slots, show missing only, announce needs, announce channel
 - Feature: Add setting for channel to announce needs to
