--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2.6.1
+- Potential fixes to updating bis data when items are looted (but probably still doesn't work anyways)
+- Some item updates
+
 2.6.0
 - Added ability to save character sets so you can easily view a given set of characters
 - Added button to delete data for selected character, so you can easily remove those dumb bazaar mules you accidentally ran BIS on one day
