switch item list when entering a zone with a list

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+3.2.3
+- Switch item list when entering a zone with an item list
+
+3.2.2
+- Misc spell updates
+
+3.2.1
+- Misc spell updates
+
 3.2.0
 - Added missing spells tab
 
