--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.3.1
+- Fix tradeskills not showing up in list
+- Fix some item need announcements not announcing due to unescaped -
+
 3.3.0
 - Add DZ lockout tab and `/bis lockouts` command
 
