--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+3.4.0
+- Persist missing spells and tradeskills information for offline toons
+
 3.3.1
 - Fix tradeskills not showing up in list
 - Fix some item need announcements not announcing due to unescaped -
